// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UglifyJsPlugin buildError method 1`] = `
[Error: test.js from UglifyJs
Message]
`;

exports[`UglifyJsPlugin buildError method 2`] = `
[Error: test.js from UglifyJs
Message [test.js:1,1]]
`;

exports[`UglifyJsPlugin buildError method 3`] = `
[Error: test.js from UglifyJs
Message [./one.js:1,1][test.js:1,1]]
`;

exports[`UglifyJsPlugin buildError method 4`] = `
[Error: test.js from UglifyJs
Stack]
`;

exports[`UglifyJsPlugin buildSourceMap method 1`] = `
SourceMapConsumer {
  "_absoluteSources": Array [
    "http://example.com/www/js/one.js",
    "http://example.com/www/js/two.js",
  ],
  "_mappings": "CAAC,IAAI,IAAM,SAAUA,GAClB,OAAOC,IAAID;CCDb,IAAI,IAAM,SAAUE,GAClB,OAAOA",
  "_names": ArraySet {
    "_array": Array [
      "bar",
      "baz",
      "n",
    ],
    "_set": Map {
      "bar" => 0,
      "baz" => 1,
      "n" => 2,
    },
  },
  "_sourceMapURL": undefined,
  "_sources": ArraySet {
    "_array": Array [
      "one.js",
      "two.js",
    ],
    "_set": Map {
      "one.js" => 0,
      "two.js" => 1,
    },
  },
  "file": "test.js",
  "sourceRoot": "http://example.com/www/js/",
  "sourcesContent": null,
}
`;

exports[`UglifyJsPlugin buildWarning method 1`] = `"UglifyJs Plugin: Warning[foo:1,1]"`;

exports[`UglifyJsPlugin buildWarning method 2`] = `"UglifyJs Plugin: Warning[foo:1,1]"`;

exports[`UglifyJsPlugin buildWarning method 3`] = `"UglifyJs Plugin: Warning[foo:1,1] in test.js"`;

exports[`UglifyJsPlugin buildWarning method 4`] = `"UglifyJs Plugin: Warning[foo:1,1] in test.js"`;

exports[`UglifyJsPlugin buildWarning method 5`] = `"UglifyJs Plugin: Warning[foo:1,1] in test.js"`;

exports[`UglifyJsPlugin buildWarning method 6`] = `null`;

exports[`UglifyJsPlugin buildWarning method 7`] = `"UglifyJs Plugin: Warning[./one.js:1,1] in test.js"`;

exports[`UglifyJsPlugin should works (without options): errors 1`] = `Array []`;

exports[`UglifyJsPlugin should works (without options): main.0c220ec66316af2c1b24.js 1`] = `"webpackJsonp([0],[function(o,n){o.exports=function(){console.log(7)}}],[0]);"`;

exports[`UglifyJsPlugin should works (without options): manifest.d6857f782c13a99b5917.js 1`] = `"!function(r){var n=window.webpackJsonp;window.webpackJsonp=function(e,u,c){for(var f,i,p,a=0,l=[];a<e.length;a++)i=e[a],o[i]&&l.push(o[i][0]),o[i]=0;for(f in u)Object.prototype.hasOwnProperty.call(u,f)&&(r[f]=u[f]);for(n&&n(e,u,c);l.length;)l.shift()();if(c)for(a=0;a<c.length;a++)p=t(t.s=c[a]);return p};var e={},o={1:0};function t(n){if(e[n])return e[n].exports;var o=e[n]={i:n,l:!1,exports:{}};return r[n].call(o.exports,o,o.exports,t),o.l=!0,o.exports}t.m=r,t.c=e,t.d=function(r,n,e){t.o(r,n)||Object.defineProperty(r,n,{configurable:!1,enumerable:!0,get:e})},t.n=function(r){var n=r&&r.__esModule?function(){return r.default}:function(){return r};return t.d(n,\\"a\\",n),n},t.o=function(r,n){return Object.prototype.hasOwnProperty.call(r,n)},t.p=\\"\\",t.oe=function(r){throw console.error(r),r}}([]);"`;

exports[`UglifyJsPlugin should works (without options): warnings 1`] = `Array []`;
